# observable

./: CMakeLists.txt  LICENCE  README.md  main.cpp  observable-config.cmake  observable.cpp  observable.h  observable_global.h
